Add button to start game

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Memory Game!</h1>
+    <p><button type="button" class="start-game-btn">Start Game</button></p>
     <div id="game">
     </div>
     <script src="script.js"></script>
