Display score and button to restart game once completed

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 
 <body>
-    <h1>Memory Game!</h1>
+    <header>
+        <h1>Memory Game!</h1>
+        <span class="score-counter">0</span>
+    </header>
     <p><button type="button" class="start-game-btn">Start Game</button></p>
+    <p><button type="button" class="restart-game-btn">Restart Game</button></p>
     <div id="game">
     </div>
     <script src="script.js"></script>
