--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
 
 <head>
     <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <title>Memory Game!</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
     <header>
-        <h1>Memory Game!</h1>
-        <span class="score-counter">0</span>
+        <h1>MEMORY GAME!</h1>
+        <p class="score">SCORE <span class="score-counter">0</span></p>
     </header>
-    <p><button type="button" class="start-game-btn">Start Game</button></p>
-    <p><button type="button" class="restart-game-btn">Restart Game</button></p>
+    <p><button type="button" class="start-game-btn">START GAME</button></p>
+    <p><button type="button" class="restart-game-btn">RESTART GAME</button></p>
     <div id="game">
     </div>
     <script src="script.js"></script>
