--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <header>
-        <h1>MEMORY GAME!</h1>
-        <p class="score">SCORE <span class="score-counter">0</span></p>
+        <h1 class="banner">MEMORY GAME!</h1>
+        <p class="score banner">SCORE : <span class="score-counter">0</span></p>
     </header>
     <p><button type="button" class="start-game-btn">START GAME</button></p>
     <p><button type="button" class="restart-game-btn">RESTART GAME</button></p>
