Add warning for mobile device

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <p><button type="button" class="restart-game-btn">RESTART GAME</button></p>
     <div id="game">
     </div>
+    <footer class="banner">NOTE : WEBPAGE IS NOT OPTIMIZED FOR MOBILE DEVICES</footer>
     <script src="script.js"></script>
 </body>
 
